...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:background="#E4ECEC"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                    android:layout_marginTop="20dp"
                    android:text="@string/hello"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/LayoutProfile"
                    android:layout_width="500dp"
                    android:layout_height="370dp"
                    android:layout_below="@+id/txtWhichUser"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
...
                        android:scaleType="fitXY"
                        android:src="@drawable/line"
                        app:tint="#2196F3" />


                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPI"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="9dp"
                        android:autofillHints="Name"
...
                        android:layout_marginTop="25dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtCompanyName"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="Last Name"
...
                        android:layout_marginTop="25dp"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/edtCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPhone"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="City"
...
                        android:text="@string/city"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                    <RadioGroup
                        android:id="@+id/RadioGroupGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="70dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <RadioButton
                            android:id="@+id/radio_Male"
                            android:layout_width="33dp"
                            android:layout_height="33dp"
                            android:layout_margin="5dp"
                            android:adjustViewBounds="true"
                            android:background="@color/white"
                            android:button="@drawable/male2"
...
                        android:layout_marginTop="25dp"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/btnSubmitInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtGender"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="25dp"
                        android:backgroundTint="#FF5722"
...
                        android:textSize="15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/AdminLayout"
                    android:layout_width="500dp"
                    android:layout_height="900dp"
                    android:layout_below="@+id/LayoutPostJob"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_with_shadow">

...
                        android:textColor="@color/white"
                        android:textSize="12sp"

                        />

                    <TextView
                        android:id="@+id/txtAmountUsers1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/AdminButtonComments"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/amount_of_users"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAmountUsers2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtAmountUsers1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
...
