...
    <string name="Name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="submit_info">submit info</string>
    <string name="name">Name</string>
    <string name="submit_cv">Submit Cv</string>
    <string name="company_name">Company Name</string>
    <string name="job_type">Job Type</string>
    <string name="location_of_job">Location Of Job</string>
    <string name="job_description">Job Description</string>
...
